k8s/nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx-app
  labels:
    app: nginx

spec:
  replicas: 3

  selector:
    matchLabels:
      app: nginx

  template:
    metadata:
      labels:
        app: nginx

    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
